...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/moodID"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/mood_bg"
                android:orientation="horizontal"
...
                    android:layout_marginLeft="10dp"
                    android:padding="8dp"
                    android:src="@drawable/mood" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/symptomID"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/symptom_bg"
                android:orientation="horizontal"
...
                    android:layout_marginLeft="10dp"
                    android:padding="8dp"
                    android:src="@drawable/symptom" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/medicationID"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/medication_bg"
                android:orientation="horizontal"
...
                    android:layout_marginLeft="10dp"
                    android:padding="8dp"
                    android:src="@drawable/medication" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/substanceUseID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/substance_bg"
                android:orientation="horizontal"
...
                    android:layout_marginLeft="10dp"
                    android:padding="8dp"
                    android:src="@drawable/substance_use" />
            </LinearLayout>

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:background="@drawable/edittext_bg"
                android:text="Log Out"
...
