<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F56BD2">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/log_saved"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:text="@string/mood_details"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/emotions_result"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="40dp"
        android:text="@string/emotion"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/sleep_hours_result"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="12dp"
        android:text="@string/hours_sleep"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.209"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotions_result" />

    <TextView
        android:id="@+id/note_result"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="40dp"
        android:text="@string/notes"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.192"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_hours_result" />

    <Button
        android:id="@+id/button_continue"
        android:layout_width="150dp"
        android:layout_height="66dp"
        android:layout_marginTop="52dp"
        android:color="@color/substanceUse_end"
        android:background="@drawable/edittext_bg"
        android:text="@string/continue_button"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_result" />

</androidx.constraintlayout.widget.ConstraintLayout>
