<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#798AE9">

    <ImageView
        android:id="@+id/exit"
        android:layout_width="39dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/close" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="323dp"
        android:layout_height="74dp"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="Medication Tracker"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:padding="30dp"
        android:layout_height="wrap_content"
        android:text="Add medication or supplement along with the amount of times taken per day and the dosage in mg/ml."
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="32dp"
        android:text="Pills Name:"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="36dp"
        android:text="Pills Dosage:"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="32dp"
        android:text="Pills Amount:"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/name_of_pills"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint="E.g:Melatonin, Losartan"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/num_of_pills"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint=" Times per day"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/name_of_pills" />

    <EditText
        android:id="@+id/num_of_dosage"
        android:layout_width="225dp"
        android:layout_height="45dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/edittext_bg"
        android:ems="10"
        android:hint=" mg or ml"
        android:inputType="number"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/num_of_pills" />

    <Button
        android:id="@+id/save"
        android:layout_width="113dp"
        android:layout_height="54dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/edittext_bg"
        android:text="Save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
